# Houdini-TaubinSmoothingCL

./: CMakeLists.txt  README.md  SOP_TaubinSmoothingCl.cpp  SOP_TaubinSmoothingCl.h  SOP_TaubinSmoothingCl_kernel.cpp  SOP_TaubinSmoothingCl_kernel.h  ThreadedObject.cpp  ThreadedObject.h
help/nodes/sop/: taubinsmoothingcl.txt
ocl/: taubinsmoothingkernels.cl
